--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Project</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
