--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Project</title>
 
   <!-- Theme toggling adaptation to user settings -->
-  <script>
+  <!-- <script>
     let localSTheme = localStorage.getItem('theme');
     let themeToSet = localSTheme;
 
@@ -16,7 +16,7 @@
     }
 
     document.documentElement.setAttribute('data-theme', themeToSet);
-  </script>
+  </script> -->
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/reset.css">
